# cincv-exp-ab

./: .gitignore  MERGE_STATUS  Makefile.am  configure.ac
cinelerra/: .gitignore  Makefile.am  asset.C  asset.h  assetedit.C  assetedit.h  audioalsa.C  awindow.C  awindowgui.C  awindowgui.h  batchrender.C  brender.C  clipedit.C  cwindowtool.C  cwindowtool.h  editpanel.C  editpanel.h  edlsession.C  edlsession.h  fileavi.C  fileexr.C  filegif.C  filejpeg.C  filelist.C  filemov.C  filempeg.C  filempeg.h  filepng.C  filetiff.C  labels.C  mainclock.C  mwindow.C  mwindow.h  mwindowedit.C  new.C  new.h  packagedispatcher.C  packagerenderer.C  playbackprefs.h  pluginclient.h  (+10 more)
cinelerra/data/: Makefile.am
guicast/: Makefile.am  bcbitmap.C  bcclipboard.C  bcfilebox.C  bcfilebox.h  bcfilebox.inc  bclistbox.C  bcmenuitem.C  bcpan.C  bcresources.C  bcresources.h  bcsignals.C  bcsynchronous.h  bctextbox.C  bctextbox.h  bctumble.C  bctumble.h  bcwindowbase.C  bcwindowbase.h  bcwindowevents.C  units.C  units.h  vframe3d.C
libmpeg3/: .gitignore  Makefile.am
m4/: ChangeLog  Makefile.am
mplexlo/: Makefile.am
plugins/: Makefile.am
plugins/aging/: Makefile.am
plugins/bluedottheme/data/: Makefile.am  bluedottheme_data  bluedottheme_data.data
plugins/burn/: Makefile.am
plugins/defaulttheme/: defaulttheme.C  defaulttheme.h
plugins/defaulttheme/data/: .gitignore  Makefile.am
plugins/denoisefft/: Makefile.am
plugins/dot/: Makefile.am
plugins/downsample/: Makefile.am
plugins/graphic/: Makefile.am
plugins/holo/: Makefile.am
plugins/lens/: Makefile.am
plugins/motion/: Makefile.am
plugins/motion2point/: Makefile.am
plugins/parametric/: Makefile.am
plugins/pitch/: Makefile.am
plugins/shapewipe/: Makefile.am
plugins/spectrogram/: Makefile.am
plugins/suv/: .gitignore
plugins/suv/data/: Makefile.am
plugins/svg/: svgwin.C
plugins/swapframes/: Makefile.am
plugins/synthesizer/: Makefile.am
plugins/timeavg/: Makefile.am
plugins/timestretch/: Makefile.am
plugins/titler/: title.C  title.h  titlewindow.C  titlewindow.h
po/: .gitignore  ChangeLog
quicktime/: Makefile.am  avi_indx.c  avi_strl.c  cmodel_default.c  cmodel_permutation.h  codecs.c  colormodels.c  colormodels.h  funcprotos.h  qtffmpeg.c  qth264.c  qtprivate.h  quicktime.c  quicktime.h  stsdtable.c  trak.c
